# speech-ml

./: README.md
audio-processing/: pyproject.toml  split_audio_chunks.py
audio-processing/.devcontainer/: devcontainer.json
model_training/.devcontainer/: devcontainer.json
model_training/whisper/: pyproject.toml
model_training/whisper/dataset/: language-x-change-dataset.py  prepare_data.py  update_content_in_dataset.py
model_training/whisper/training/: README.md  accuracy_match.py  create_sweep.py  fine_tune_cantonese_experiment.ipynb  run-trained-model.py  training-tryout.ipynb  training.py
