[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = ["Kenny Li <karlili.li@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
pyannote-audio = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
